--- a/k8s-deployment/troubleshooting/scenario-1/namespace.yaml
+++ b/k8s-deployment/troubleshooting/scenario-1/namespace.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
-kind: Namespace
-metadata:
-  name: wrk
----
-apiVersion: v1
 kind: ResourceQuota
 metadata:
   name: resource-quota-sample
-  namespace: wrk
+  namespace: tm2
+kind: Namespace
+metadata:
+  name: wrk
 spec:
   hard:
     pods: "10"
